--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body{
-    background: #BBC6B8;
+    background: lightblue;
     font-family:Arial, Helvetica, sans-serif
 }
 
@@ -7,21 +7,19 @@ body{
     display: flex;
     padding: 10px;
     margin: 10px;
-    background: #F3D8CE;
+    background: lightgoldenrodyellow;
 }
 
 .assignment img{
     width: 200px;
-    border: 2px solid #BBC6B8;
-    margin-right: 20px;
+    padding: 10px;
 }
 
 h1{
-    color: #41270E;
+    color: whitesmoke;
     text-align:center;
 }
 
-a{
+a {
     text-decoration:none;
-    color:#233D16;
 }
