--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,17 @@ body{
     display: flex;
     padding: 10px;
     margin: 10px;
+    margin-bottom: 30px;
     background: #F3D8CE;
+    border-radius:5px;
+    box-shadow: 5px 8px #e9b7a5;
 }
 
 .assignment img{
     width: 200px;
     border: 2px solid #BBC6B8;
     margin-right: 20px;
+    border-radius:5px;
 }
 
 h1{
@@ -24,4 +28,8 @@ h1{
 a{
     text-decoration:none;
     color:#233D16;
+}
+
+.assignment a:hover{
+    color:#41270E;
 }
