--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,13 @@ body{
     font-family:Arial, Helvetica, sans-serif
 }
 
-.assignment {
+.assignements {
     display: flex;
+    flex-wrap:wrap;
+}
+
+.assignment {
+    width:21%;
     padding: 10px;
     margin: 10px;
     margin-bottom: 30px;
@@ -18,6 +23,8 @@ body{
     border: 2px solid #BBC6B8;
     margin-right: 20px;
     border-radius:5px;
+    display:block;
+    margin:auto;
 }
 
 h1{
